--- a/templates/admin/events.html.twig
+++ b/templates/admin/events.html.twig
@@ -18,7 +18,6 @@
                             <th>Id</th>
                             <th>Créateur</th>
                             <th>Titre</th>
-                            <th>Description</th>
                             <th>Type</th>
                             <th>Date de début</th>
                             <th>Date de fin</th>
@@ -45,13 +44,6 @@
                             {% endif %}
                             </td>
                             <td>
-                            {% if event.description|default %}
-                                {{ event.description }}
-                            {% else %}
-                                Non renseigné
-                            {% endif %}
-                            </td>
-                            <td>
                             {% if  event.type|default %}
                                 {{ event.type }}
                             {% else %}
@@ -69,7 +61,7 @@
                             {% if  event.end_date|default %}
                                 {{ event.end_date }}
                             {% else %}
-                                Non renseigné
+                                Non renseignée
                             {% endif %}
                             </td>
                             <td>
@@ -87,7 +79,7 @@
                         </tr>
                     {% endfor %}
                 </table>
-                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer un nouvel Évènement</button>
+                <button class='btn btn-primary clickable' onclick="window.location='#'">Créer un nouvel événement</button>
                 </div>
         </main>
     </div>
