--- a/templates/admin/staff.html.twig
+++ b/templates/admin/staff.html.twig
@@ -11,13 +11,13 @@
         <main class="col-md-8 full-height">
             {{ include('include/_admin_title.html.twig') }}
                 <div class="card">
-                <h1 class="display-2">Gestion des Équipes</h1>
+                <h1 class="display-2">Gestion du Staff</h1>
                 <table class="table table-striped table-dark table-hover">
                     <thead>
                         <tr>
                             <th>Id</th>
                             <th>Prénom</th>
-                            <th>Rôle</th>
+                            <th>Responsabilité</th>
                             <th>Téléphone</th>
                             <th>E-mail</th>
                         </tr>
