really not atomic commit

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -190,3 +190,11 @@ span.leftbar {
 .card-news:first-child{
     display: block;
 }
+
+.calendar-padding {
+    padding: 2em;
+}
+
+.fc-view-container {
+    background: rgba(255, 255, 255, 0.25);
+}
