--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,6 +14,6 @@
     </div>
 {% block javascripts %}
     {{ parent() }}
-    {{ encore_entry_script_tags('news') }}
+    {{ encore_entry_script_tags('app') }}
 {% endblock %}
 {% endblock %}
