--- a/assets/styles/_custom.scss
+++ b/assets/styles/_custom.scss
@@ -3,3 +3,7 @@ $dark: #101010cc;
 
 // Nav
 $nav-link-color: #ffffff;
+
+@mixin container-padding($padding: $container-padding) {
+    padding: 2em;
+}
