--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -4,8 +4,18 @@
 
 {% block content %}
 <div class="container-fluid">
-    <div class="full-height flex align-items-center justify-content-center">
-        <main class="col-md-4">
+<div class="full-height flex align-items-center">
+        <aside class="col-md-3">
+            <div class="sidebar">
+                <ul>
+                    <a href="{{ path('profile', {'id': app.user.id}) }}"><li>Mes Informations</li></a>
+                    <a href="#"><li>Mon équipe favorite</li></a>
+                    <a href="{{path('user_edit', {'id': app.user.id})}}"><li>Modifier mes informations</li></a>
+                    <a href="{{path('app_logout')}}"><li id="logout">Se déconnecter</li></a>
+                </ul>
+            </div>
+        </aside>
+        <main class="col-md-4 offset-md-1">
             <div class="card">
                 {{ form_start(form) }}
                     {{ form_widget(form) }}
