image uploader on team

--- a/templates/team/show.html.twig
+++ b/templates/team/show.html.twig
@@ -8,6 +8,7 @@
     <div class="full-height flex align-items-center">
         <main class="col-md-12">
             <div class="card flex flex-column">
+        <img src="{{ asset('uploads/team/' ~ team.picture)}}" alt="">
                 {# Goalkeepers list #}
                 <h2>Gardien</h2>
                 <div class="flex flex-row">
