add button new player in team index

--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -21,6 +21,7 @@
             </div>
             {% endfor %}
             <a href="{{ path('team_new') }}" class="btn btn-primary btn-team" title="Nouvelle équipe">Créer une nouvelle équipe</a>
+            <a href="{{ path('player_new') }}" class="btn btn-primary btn-team" title="Nouveau joueur">Créer un nouveau joueur</a>
         </div>
     </div>  
     
