--- a/templates/team/show.html.twig
+++ b/templates/team/show.html.twig
@@ -22,17 +22,17 @@
                 <div class="flex flex-row">
                     {% for goalKeeper in goalKeepers %}
                         {% if goalKeeper.picture is not null %}
-                                <figure class="player-picture">
-                                    <img src="{{ asset('uploads/' ~ goalKeeper.picture)}}" 
-                                        alt="Équipe {{ goalKeeper.firstName ~ ' ' ~ goalKeeper.lastName }} du FC Rosheim">
-                                    <figcaption><h6>{{ goalKeeper.firstName }}</h6></figcaption>
-                                </figure>
+                            <figure class="player-picture">
+                                <img src="{{ asset('uploads/' ~ goalKeeper.picture)}}" 
+                                    alt="{{ goalKeeper.firstName ~ ' ' ~ goalKeeper.lastName }}, gardien du FC Rosheim">
+                                <figcaption><h6>{{ goalKeeper.firstName ~ ' ' ~ goalKeeper.lastName }}</h6></figcaption>
+                            </figure>
                         {% else %}
-                                <figure class="player-picture">
-                                    <img src="{{ asset('img/no_player_picture.jpg')}}" 
-                                        alt="Équipe {{ goalKeeper.firstName ~ ' ' ~ goalKeeper.lastName }} du FC Rosheim">
-                                    <figcaption><h6>{{ goalKeeper.firstName }}</h6></figcaption>
-                                </figure>
+                            <figure class="player-picture">
+                                <img src="{{ asset('img/no_player_picture.jpg')}}" 
+                                    alt="{{ goalKeeper.firstName ~ ' ' ~ goalKeeper.lastName }}, gardien du FC Rosheim">
+                                <figcaption><h6>{{ goalKeeper.firstName ~ ' ' ~ goalKeeper.lastName }}</h6></figcaption>
+                            </figure>
                         {% endif %}
                     {% endfor %}
                 </div>
@@ -40,21 +40,57 @@
                 <h2>Défenseur</h2>
                 <div class="flex flex-row">
                     {% for defender in defenders %}
-                        <h6>{{ defender.firstName }}</h6>
+                        {% if defender.picture is not null %}
+                            <figure class="player-picture">
+                                <img src="{{ asset('uploads/' ~ defender.picture)}}" 
+                                    alt="{{ defender.firstName ~ ' ' ~ defender.lastName }}, défenseur du FC Rosheim">
+                                <figcaption><h6>{{ defender.firstName ~ ' ' ~ defender.lastName }}</h6></figcaption>
+                            </figure>
+                        {% else %}
+                            <figure class="player-picture">
+                                <img src="{{ asset('img/no_player_picture.jpg')}}" 
+                                    alt="{{ defender.firstName ~ ' ' ~ defender.lastName }}, défenseur du FC Rosheim">
+                                <figcaption><h6>{{ defender.firstName ~ ' ' ~ defender.lastName}}</h6></figcaption>
+                            </figure>
+                        {% endif %}
                     {% endfor %}
                 </div>
                 {# Midfielders list #}
                 <h2>Milieu</h2>
                 <div class="flex flex-row">
                     {% for midfielder in midfielders %}
-                        <h6>{{ midfielder.firstName }}</h6>
+                        {% if midfielder.picture is not null %}
+                            <figure class="player-picture">
+                                <img src="{{ asset('uploads/' ~ midfielder.picture)}}" 
+                                    alt="{{ midfielder.firstName ~ ' ' ~ midfielder.lastName }}, milieu du FC Rosheim">
+                                <figcaption><h6>{{ midfielder.firstName ~ ' ' ~ midfielder.lastName }}</h6></figcaption>
+                            </figure>
+                        {% else %}
+                            <figure class="player-picture">
+                                <img src="{{ asset('img/no_player_picture.jpg')}}" 
+                                    alt="{{ midfielder.firstName ~ ' ' ~ midfielder.lastName }}, milieu du FC Rosheim">
+                                <figcaption><h6>{{ midfielder.firstName ~ ' ' ~ midfielder.lastName}}</h6></figcaption>
+                            </figure>
+                        {% endif %}
                     {% endfor %}
                 </div>
                 {# Strickers list #}
                 <h2>Attaquant</h2>
                 <div class="flex flex-row">
                     {% for stricker in strickers %}
-                        <h6>{{ stricker.firstName }}</h6>
+                        {% if stricker.picture is not null %}
+                            <figure class="player-picture">
+                                <img src="{{ asset('uploads/' ~ stricker.picture)}}" 
+                                    alt="{{ stricker.firstName ~ ' ' ~ stricker.lastName }}, attaquant du FC Rosheim">
+                                <figcaption><h6>{{ stricker.firstName ~ ' ' ~ stricker.lastName }}</h6></figcaption>
+                            </figure>
+                        {% else %}
+                            <figure class="player-picture">
+                                <img src="{{ asset('img/no_player_picture.jpg')}}" 
+                                    alt="{{ stricker.firstName ~ ' ' ~ stricker.lastName }}, attaquant du FC Rosheim">
+                                <figcaption><h6>{{ stricker.firstName ~ ' ' ~ stricker.lastName}}</h6></figcaption>
+                            </figure>
+                        {% endif %}
                     {% endfor %}
                 </div>
             </div>
