--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -235,8 +235,14 @@ img{
     flex-flow: column;
     margin: auto;
     width: 200px;
-    height: auto;
+    height: 200px;
     margin: 2px 5px;
+}
+.player-picture img{
+    overflow: hidden;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 .player-picture figcaption {
     width: 100%;
