--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Event index{% endblock %}
 
 {% block content %}
+
+<div id="calendar-holder" class="calendar-padding"></div>
+
     <h1>Event index</h1>
 
     <table class="table">
@@ -44,4 +47,49 @@
     </table>
 
     <a href="{{ path('event_new') }}">Create new</a>
+{% endblock %}
+
+{% block javascripts %}
+	<script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction@4.1.0/main.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.js"></script>
+
+	<script type="text/javascript">
+		document.addEventListener('DOMContentLoaded', () => {
+			var calendarEl = document.getElementById('calendar-holder');
+
+				var calendar = new FullCalendar.Calendar(calendarEl, {
+					defaultView: 'dayGridMonth',
+					allDay: true, // hide event time
+					editable: true,
+					eventSources: [
+						{
+							url: "{{ path('fc_load_events') }}",
+							method: "POST",
+							extraParams: {
+							filters: JSON.stringify({})
+							},
+							failure: () => { // alert("There was an error while fetching FullCalendar!");
+							}
+						},
+					],
+				header: {
+					left: 'prev,next today',
+					center: 'title',
+					right: 'dayGridMonth,timeGridWeek,timeGridDay'
+				},
+				plugins: [
+					'interaction', 'dayGrid', 'timeGrid'
+				], // https://fullcalendar.io/docs/plugin-index
+				timeZone: 'UTC'
+			});
+
+			// var calendarGrid = document.getElementsByClassName('fc-view-container');
+			// calendarGrid.classList.add('calendar-bg');
+
+			calendar.setOption('locale', 'fr');
+			calendar.render();
+});
+	</script>
 {% endblock %}
