--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -60,6 +60,8 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+    
 	<script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction@4.1.0/main.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.js"></script>
