--- a/templates/admin/staff_edit.html.twig
+++ b/templates/admin/staff_edit.html.twig
@@ -10,7 +10,7 @@
         <main class="col-md-8 full-height">
             {{ include('include/_admin_title.html.twig') }}
                 <div class="card">
-                <h1 class="display-2">Gestion des Utilisateurs</h1>
+                <h1 class="display-2">Gestion du Staff</h1>
                     {{ form_start(form, {attr: {class: 'form-user-submit'}}) }}
                     <table class="table table-striped table-dark table-hover">
                         <tbody>
