--- a/templates/admin/players_edit.html.twig
+++ b/templates/admin/players_edit.html.twig
@@ -10,78 +10,66 @@
         <main class="col-md-8 full-height">
             {{ include('include/_admin_title.html.twig') }}
                 <div class="card">
-                <h1 class="display-2">Gestion des Utilisateurs</h1>
-                    {{ form_start(form, {attr: {class: 'form-user-submit'}}) }}
+                <h1 class="display-2">Gestion des Joueurs·euses</h1>
+                    {{ form_start(form, {attr: {class: 'form-players-submit'}}) }}
                     <table class="table table-striped table-dark table-hover">
                         <tbody>
                             <tr>
                                 <th>ID</th>
-                                <td>{{ user.id }}</td>
-                            </tr>
-                            <tr>
-                                <th>E-mail</th>
-                                <td id="user_email">
-                                    {{ form_widget(form.email) }}
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>Pseudonyme</th>
-                                <td id="user_nickname">
-                                    {{ form_widget(form.nickname) }}
-                                </td>
+                                <td>{{ player.id }}</td>
                             </tr>
                             <tr>
                                 <th>Prénom</th>
-                                <td id="user_firstName">
-                                    {{ form_widget(form.first_name) }}
+                                <td>
+                                    {{ form_widget(form.firstName) }}
                                 </td>
                             </tr>
                             <tr>
                                 <th>Nom de famille</th>
-                                <td id="user_lastName">
+                                <td>
                                     {{ form_widget(form.lastName) }}
                                 </td>
                             </tr>
                             <tr>
-                                <th>Telephone</th>
-                                <td id="user_phone">
-                                    {{ form_widget(form.phone) }}
+                                <th>Téléphone</th>
+                                <td>
+                                    {{ form_widget(form.number) }}
                                 </td>
                             </tr>
                             <tr>
                                 <th>Date de naissance</th>
-                                <td id="user_birthDate">
+                                <td>
                                     {{ form_widget(form.birthdate) }}
                                 </td>
                             </tr>
                             <tr>
-                                <th>License</th>
-                                <td id="user_license">
-                                    {{ form_widget(form.license) }}
+                                <th>Photo</th>
+                                <td>
+                                    {{ form_widget(form.picture) }}
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Slug</th>
+                                <td>
+                                    {{ form_widget(form.slug) }}
                                 </td>
                             </tr>
                             <tr>
                                 <th>Équipe</th>
-                                <td id="user_team">
+                                <td>
                                     {{ form_widget(form.team) }}
                                 </td>
                             </tr>
                             <tr>
-                                <th>Responsabilité</th>
-                                <td id="user_staff">
-                                    {{ form_widget(form.staff) }}
+                                <th>Position</th>
+                                <td>
+                                    {{ form_widget(form.position) }}
                                 </td>
                             </tr>
                             <tr>
-                                <th>Rôles</th>
-                                <td id="user_roles">
-                                    {{ form_widget(form.roles) }}
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>E-mail vérifié</th>
-                                <td id="user_isVerified">
-                                    {{ form_widget(form.isVerified) }}
+                                <th>Statistiques</th>
+                                <td>
+                                    <a href="{{ path('admin_stats_edit', {'id': player.id}) }}">Voir statistiques</a>
                                 </td>
                             </tr>
                         </tbody>
@@ -89,9 +77,9 @@
                         <button class='btn btn-primary' id='admin_save_button' type="submit">Sauvegarder</button>
                         <button id="admin_delete_button" class="btn btn-outline-warning" form="delete_form">Supprimer</button>
                 {{ form_end(form) }}
-                    <form id="delete_form" method="post" action="{{ path('admin_users_delete', {id: user.id}) }}">
+                    <form id="delete_form" method="post" action="{{ path('admin_players_delete', {id: player.id}) }}">
                         <input type="hidden" name="_method" value="DELETE">
-                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ player.id) }}">
                     </form>
                 </div>
         </main>
