hidden updatedAt value now automatic

--- a/templates/admin/news_edit.html.twig
+++ b/templates/admin/news_edit.html.twig
@@ -66,7 +66,7 @@
                                     {{ form_widget(form.createdAt) }}
                                 </td>
                             </tr>
-                            <tr>
+                            <tr hidden>
                                 <th>MàJ le</th>
                                 <td>
                                     {{ form_widget(form.updatedAt) }}
